tests/ui/zeroize/skip.stderr
error: unsupported trait, expected one of Clone, Copy, Debug, Default, Eq, Hash, Ord, PartialEq, PartialOrd, Zeroize, ZeroizeOnDrop
 --> tests/ui/zeroize/skip.rs:5:16
  |
5 | #[derive_where(Skip; T)]
  |                ^^^^
